	'src/rdlibraryb/Makefile.am' and 'src/rdlogeditb/Makefile.am' that
	broke the build on Linux.
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make nsis-installer' target.
	* Modified 'COPYING.rtf' to be compatible with the NSIS dialog layout.
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2017-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Extended 'StreamPlayer in 'src/common/streamplayer_alsa.cpp' to
	support playing mono files on hardware without direct support for
	mono.
2017-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libsamplerate-0.dll' to the 'make winstall-win32' target.
	* Added 'libsamplerate-0.dll' to the set of installed DLLs in
	'rivendell-browser.nsi.in'.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default error message in
	'src/common/streamplayer_alsa.cpp' and
	'src/common/streamplayer_mme.cpp' to 'No audio available'.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/cartfilterwidget.cpp' that caused
	the 'Clear' button to be disabled after executing a search.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Include "ALL" in Filter Group' control to
	rdadminb(1).
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Increased the size of the data preload in
	'src/common/streamplayer_alsa.cpp'.
	* Disabled direct cart-to-cart playing in
	'src/rdlibraryb/rdlibraryb.cpp'.
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/streamplayer_alsa.cpp' that broke the
	build under MinGW.
	* Fixed a bug in streamplayer.cpp' that caused clicks and pops
	when playing WAV files without WAVEFORMATEX extensions.
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Reenabled direct cart-to-cart playing for MME devices.
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Commented out debugging printfs.
	* Reenabled direct cart-to-cart playing for ALSA devices.